www/css/style.css
/* ... */
div.sub_menu_left{
	float: left; 
	padding-left: 11px;
}

div.sub_menu_right{
	float: right; 
	padding-left: 8px;
	padding-right: 1px;
}

div.sub_menu_right img{
	position: relative; 
	top: 5px;
}

div.sub_menu_left_space{
	float: left; 
	padding-left: 15px;
}

div.hidden_menu_row{
	width: 100px; 
	float:left
}

div.sub_menu_right_space{
	float: right; 
	padding-right: 15px;
}

div.sub_menu_item_red{
	background-image: url('../images/menu_border_red.png');
	background-position: bottom left;
	background-repeat: repeat-x; 
	font-weight: bold; 
	float: left; 
	height: 38px; 
	max-width:60px;
	padding-left: 3px;
	padding-right: 3px;
	padding-top: 10px; 
	color: #D21034;
}

div.sub_menu_item_green{
	background-image: url('../images/menu_border_green.png');
	background-position: bottom left;
	background-repeat: repeat-x;
	font-weight: bold; 
	float: left; 
	height: 38px; 
	max-width:35px;
	padding-left: 3px;
	padding-right: 3px;
	padding-top: 10px; 
	color: #4B9B07;
}


div.sub_menu_item_yellow{
	background-image: url('../images/menu_border_yellow.png');
	background-position: bottom left;
	background-repeat: repeat-x;
	font-weight: bold; 
	float: left; 
	height: 38px;
	max-width:60px;
	padding-left: 3px;
	padding-right: 3px;
	padding-top: 10px; 
	color: #FFC726;
}

div.sub_menu_item_blue{
	background-image: url('../images/menu_border_blue.png');
	background-position: bottom left;
	background-repeat: repeat-x;
	font-weight: bold; 
	float: left; 
	height: 38px; 
	max-width:80px;
	padding-left: 3px;
	padding-right: 3px;
	padding-top: 10px; 
	color: #0089CF;
}

div.sub_menu_item_deepblue{
	background-image: url('../images/menu_border_deepblue.png');
	background-position: bottom left;
	background-repeat: repeat-x;
	font-weight: bold; 
	float: left; 
	height: 38px; 
	padding-left: 3px;
	padding-right: 3px;
	padding-top: 10px; 
	color: #003581;
}

#add_content_menu_challenge{
	background: #eeeeee; 
	width: 126px; 
	border-bottom: 1px solid #cccccc;
}

#add_content_menu_idea{
	background: #eeeeee; 
	width: 126px; 
	border-bottom: 1px solid #cccccc;
}

#add_content_menu_vision{
	background: #eeeeee; 
	width: 126px;
}

div.hidden_menu_red{
	float:left; 
	width: 17px; 
	height: 17px; 
	background: #D21034;
	margin-right: 6px;
}

div.hidden_menu_green{
	float:left; 
	width: 17px; 
	height: 17px; 
	background: #4B9B07; 
	margin-right: 6px;
}

div.hidden_menu_yellow{
	float:left; 
	width: 17px; 
	height: 17px;
	background: #FFC726; 
	margin-right: 6px;
}

/* The actual content area */

div.content{
	padding: 15px;
	margin-top: -2px;
}


div.content_menu{
	text-align: left;
	word-spacing: 15px; 
	font-weight: bold;
	padding-bottom: 15px;
}

div.user_content_list{
	float: left;
	position: relative;
	top: -23px;
	margin-left: -1px;
	padding: 0px;
}

div.user_content_row{
	width: 500px;
    border-top: 1px dotted #DDDDDD;
    margin: 10px 0 10px 0;
}

div.linking_content {
    float: left;
	width: 500px;
    margin-bottom: 10px;
}

div.user_image_list{
	padding-left: 0px;
	padding-top: 8px;
	float: left; 
}

div.user_summary_list_with_stats{
	text-align: left;
	width: 300px;
	padding-left: 11px;
	padding-top: 6px;
	margin-bottom: -1px;
	float: left;
}

div.user_summary_list_without_stats{
	text-align: left;
	width: 420px;
	padding-left: 11px;
	padding-top: 6px;
	margin-bottom: -1px;
	float: left;
}

div.user_summary_stats{
	padding-top: 6px;
	font-size: 12px;
	width: 110px;
	float: left;
	text-align: left;
	padding-left: 10px;
}

div.user_content_spacer{
	padding-bottom: 0px;
	padding: 0px;
	margin: 0px;
	margin-left: -8px;
	padding-top: 0px;
}

div.user_content_spacer img{
	padding: 8px;
	margin-bottom: -6px;
    width: 98%;
}

/* Right side of the content area */

div.right_side{
	float: right;
	width: 205px;
	margin-top: -52px;
	margin-right: 0px;
	font-size: 12px;
}

div.right_side p{
	padding: 5px 0;
	margin: 0px;
}

div.top_right_box_links_users{
	padding-left: 7px; 
	font-size: 12px;
}

div.massidea_dev_info{
	text-align: left; 
	padding-top: 8px; 
	font-weight: bold; 
	font-size: 12px;
}

div.before_footer{
	padding-bottom: 6px;
}

div.top_right_box_links_show_all_users{
	margin-bottom: -4px; 
	padding-left: 5px; 
	padding-top: 10px;
	font-size: 12px; 
	font-weight: bold;
}

div.tag_cloud{
	margin-top: 4px; 
	width: 187px; 
	margin-left: 0px; 
	padding: 6px; 
	border: 0px solid silver; 
	font-size: 11px;
    overflow: hidden;
}

div.tag_cloud a {
	margin: 3px;
}

div.tag_cloud a:hover {
	background-color: #D9F2FF;
	margin: 3px;
}


div.top_right_box{
	border: 1px solid #cccccc;
	padding: 12px;
	background: #eeeeee;
	text-align: left;
	font-size: 12px;
	margin-right: 0px;
	margin-top: 0px;
	width: 175px;
}

div.user_listing_top_menu p{
	padding: 0px;
	margin: 0px;
	padding-top: 2px;
}

/* The footer */

div.footer{
	text-align: center;
	color: #CCCCCC;
	width: 748px;
	border-left: 1px solid white;
	border-right: 1px solid white;
	background: white;
	padding-top: 0px;
	margin-top: -20px;
	margin-left: auto;
	margin-right: auto;
	height: 194px;
	display: block;
	font-size: 12px;
}

div.footer_links{
	width: 746px;
	text-align: center;
	word-spacing: 10px;
	font-size: 12px;
	color: #0089CF;
	padding-bottom: 0px;
	margin-bottom: 0px;
}

div.footer_left{
	width: 47%; 
	float: left;
}

div.footer_project_funded{
	text-align: left; 
	padding-left: 30px;
}

div.footer_right{
	width: 47%; 
	text-align: left; 
	padding-left: 25px; 
	float: left;
}

div.footer_project_coordinator{
	text-align: left;
}

div.footer_project_group{
	text-align: left; 
	padding-bottom: 6px;
}

div.footer_bottom{
	height: 10px;
}

#footer {
    margin: 0 0 0 0;
}

div#footer img.image_line {
    margin: 0 0 0 14px;
}

div#footer span.link_text {
    word-spacing: 2px;
}

div#footer div#footer_left div#footer_funded {
    text-align: left;
    padding-left: 30px;
    margin-top: 10px;
    font-size: 11px;
}

div#footer div#footer_left img {
    padding-left: 16px;
}
/* ... */

